# voice-cognitive-layer

./: .gitignore  README.md  docker-compose.yml
orlock-server/: Dockerfile  ORCHESTRATION.md  README.md  WORKFLOW.txt  check_ollama.py  requirements.txt  setup.py
orlock-server/data/: SemanticLayerBuilding.json  build_knowledge_base.py  isr_knowledge.json
orlock-server/src/orlock/: main.py
orlock-server/src/orlock/brain/: messages_in_brain.py  process_msg_in_brain.py
orlock-server/src/orlock/intent/: categories.py  detector.py
orlock-server/src/orlock/knowledge/: retriever.py
orlock-server/src/orlock/navigation/: location_mapper.py
orlock-server/src/orlock/orchestration/: __init__.py
orlock-server/src/orlock/prompts/: __init__.py  builder.py
orlock-server/src/orlock/providers/: llm_client.py
orlock-server/src/orlock/quality/: __init__.py  analyzer.py
orlock-server/src/orlock/routing/: __init__.py  model_router.py
orlock-server/src/orlock/schemas/: intent.py  llm.py  metadata.py  (+2 more)
orlock-server/tests/: test_msg_in_brain.py  test_orchestration.py  test_orchestration_integration.py  test_process_msg_in_brain.py
ros2-vad-module/: Dockerfile  README.md  end_to_end_test.py  requirements.txt  ros_env.sh  test_orlock_client.py  validation_test.py
ros2-vad-module/src/vad_component/: package.xml  setup.cfg  setup.py
ros2-vad-module/src/vad_component/launch/: guida.launch.py
ros2-vad-module/src/vad_component/vad_component/: __init__.py  fake_mic_node.py  mic_node.py  orlock_api_client.py  speech_segmentation_node.py  tts_node.py  vad_node.py
(+30 files in other folders)
